feat: get seat map and add seat mapp api
