# swagger-output.json
@@ -247,6 +247,120 @@
         }
       }
     },
+    "/api/halls": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "cinema_id": {
+                  "example": "any"
+                },
+                "name": {
+                  "example": "any"
+                },
+                "capacity": {
+                  "example": "any"
+                },
+                "screen_type": {
+                  "example": "any"
+                },
+                "seat_map": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/showtimes-cinema": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "movie_id": {
+                  "example": "any"
+                },
+                "hall_id": {
+                  "example": "any"
+                },
+                "start_time": {
+                  "example": "any"
+                },
+                "end_time": {
+                  "example": "any"
+                },
+                "base_price": {
+                  "example": "any"
+                },
+                "available_seats": {
+                  "example": "any"
+                },
+                "is_full": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/cinemas/{cinemaId}/halls/{hallId}/seat-map": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "cinemaId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "hallId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      }
+    },
     "/api/register": {
       "post": {
         "description": "",
